# vertex-ai-pipelines-step-by-step

./: .gitignore  README.md
notebooks/: dwarf_or_goblin.ipynb
pipeline/: conf.py  deploy.py  pipeline.py  pyproject.toml
pipeline/components/: predict.py  query-inputs.sql  read.py  write.py
